appId: "com.timewellwasted"
---
- openLink: exp://127.0.0.1:8081

- assertVisible: "Din tid i dag"

- tapOn: 
    id: "AddActivityButton"

- tapOn: 
    id: "ActivityNameBox"

- inputText: "youtube"

- tapOn: 
    id: "Start"

- tapOn:
    id: "StartActivityButton"

- extendedWaitUntil:
    notVisible:
      id: "ThisElementDoesNotExist"
    timeout: 670000

- tapOn:
    id: "StopActivityButton"